--- a/index.html
+++ b/index.html
@@ -7,15 +7,22 @@
     <title>La Mueve Muebleria</title>
     <link rel="stylesheet" href="https://demos.jquerymobile.com/1.4.5/css/themes/default/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="https://demos.jquerymobile.com/1.4.5/_assets/css/jqm-demos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="/css/estilos.css">
     <!-- <link rel="stylesheet" href="css/estilos.css"> -->
-
 </head>
 
 <body>
     <!-- pagina de login -->
     <div data-role="page" id="page1">
         <div data-role="header">
-            <h1>BIENBENIDOS A LA MUEVE MUEBLERIA</h1>
+            <h3 style="
+                font-size: calc(1em + 1vw);
+                text-align: center;
+                word-wrap: break-word;
+                margin: 0;
+                padding: 10px 0;
+            ">LA MUEBEMUEBLERIA</h3>
         </div>
         <div data-role="content">
             <label for="">USUARIO</label>
@@ -26,10 +33,11 @@
             <div data-role="footer">
                     <div data-role="navbar">
                             <ul>
-                                    <li><a href="#" data-icon="grid">Summary</a></li>
-                                    <li><a href="#" data-icon="star" class="ui-btn-active">Favs</a></li>
-                                    <li><a href="#" data-icon="gear">Setup</a></li>
-                                </ul>
+                            <li><a href="#"><i class="fas fa-home"></i> INGRESAR</a></li>
+                            </ul>
+                            <ul>
+                            <li><a href="#" class="ui-btn-active"><i class="fas fa-user-plus"></i> REGISTRARSE</a></li>
+                            </ul>
                         </div><!-- /navbar -->
         </div><!-- /footer -->
     </div>
