--- a/index2.html
+++ b/index2.html
@@ -18,13 +18,14 @@
 
         <div data-role="content">
             <form id="loginForm">
-                <label for="email">Correo Electrónico:</label>
-                <input type="email" name="email" id="email" placeholder="Tu correo" required>
+                <label for="nombre">Nombre de Usuario:</label>
+                <input type="text" name="nombre" id="nombre" placeholder="Tu usuario" required>
 
                 <label for="password">Contraseña:</label>
                 <input type="password" name="password" id="password" placeholder="Tu contraseña" required>
 
-                <button type="submit" data-role="button">Iniciar Sesión</button>
+                <a href="#homeScreen" data-role="button">Iniciar Sesión</a>
+                <a type="submit" href="productsPage" data-role="button">Registrarse</a>
             </form>
         </div>
 
@@ -34,7 +35,7 @@
     </div>
 
     <!-- Página de Productos -->
-    <div data-role="page" id="productsPage">
+    <div id="homeScreen"data-role="page">
         <div data-role="header">
             <h1>Lista de Productos</h1>
             <a href="#cartPage" data-role="button" class="ui-btn-right">Carrito</a>
@@ -55,7 +56,7 @@
     <div data-role="page" id="cartPage">
         <div data-role="header">
             <h1>Carrito de Compras</h1>
-            <a href="#productsPage" data-role="button" class="ui-btn-left">Volver a Productos</a>
+            <a href="#homeScreen" data-role="button" class="ui-btn-left">Volver a Productos</a>
         </div>
 
         <div data-role="content">
@@ -70,15 +71,15 @@
         </div>
     </div>
 
-    <script>
+    <!--script>
         // Simulación de inicio de sesión
         $("#loginForm").submit(function(event) {
             event.preventDefault();
             $.ajax({
-                url: "https://example.com/api/usuarios/login",  // Colocar la URL de tu API
+                url: "productsPage",  // Colocar la URL de tu API
                 type: "POST",
                 data: {
-                    email: $("#email").val(),
+                    nombre: $("#nombre").val(),
                     password: $("#password").val()
                 },
                 success: function(response) {
@@ -146,6 +147,6 @@
                 }
             });
         });
-    </script>
+    </script-->
 </body>
 </html>
